<resources>
    <string name="app_name">TimeTrackerApp</string>
    <string name="timer">Timer</string>
    <string name="records">Records</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="add_name">Please add the name of the record</string>
    <string name="initialStateOfTimer">00:00:00</string>
    <string name="save_your_record">Save your record:</string>
    <string name="add_new_record">Add new record:</string>
    <string name="save">Save</string>
    <string name="success_save">Your record was successfully saved.</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="add_manually_new_record">add manually new record</string>
    <string name="no_records_available">Record\'s list is empty.</string>
    <string name="name_of_record">Name of record…</string>
    <string name="reset_button">Reset button to reset the timer</string>
    <string name="start_the_timer">start the timer</string>
    <string name="reset_the_timer">reset the timer</string>
    <string name="filter">Filter</string>
    <string name="delete">Delete</string>
    <string name="reset_stopwatch">Reset stopwatch</string>
    <string name="start_and_stop_the_stopwatch">Start and stop the stopwatch</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="select_item_to_filter">Select item to filter</string>
    <string name="deleted">Record deleted</string>
    <string name="undo">UNDO</string>
    <string name="timePickerInput">%1$s:00</string>
    <string name="are_you_sure_to_delete_all_your_records">Are you sure to delete all your records?</string>
    <string name="bar_chart_legend_title">Activity - total hours in format HH:MM:SS</string>
    <string name="line_chart_legend_title">Total hours each day in format HH:MM:SS</string>
    <string name="total_hours">Total Hours:</string>
    <string name="warning_to_show_rules">To show this chart it is required at least two values.</string>

    <string name="pieChartLabelText">Activities in %1$s</string>
    <string name="barChartLabelText">The total sum of hours for each activity\nin %1$s</string>
    <string name="lineChartLabelText">Daily spent time with %1$s\nin %2$s</string>
    <string name="search">Search</string>
    <string name="overview">Overview</string>

    <string name="record_card_transition_name">record_card_%1$d</string>
    <string name="record_card_detail_transition_name">record_card_detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_days">Total days</string>
    <string name="average">Average</string>
    <string name="total_time">Total time</string>
    <string name="overview_record_image">overview record image</string>
    <string name="most_recents">Most Recents</string>
    <string name="overview_s_list_is_empty">Overview\'s list is empty.</string>
    <string name="no_data_text">At least two records are needed to show chart</string>
</resources>