<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_baseline_timer_24"
            android:title="@string/timer" />
        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/records_two"
            android:title="@string/records" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/statistics"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>
</menu>