<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        app:cardBackgroundColor="@color/primaryDarkColor"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        android:elevation="25dp"
        app:cardCornerRadius="25dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="17dp"
            android:layout_marginStart="12dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/date"
                style="@style/title_format_style" />

            <TextView
                style="@style/title_format_style"
                android:text="@string/name"/>

            <TextView
                style="@style/title_format_style"
                android:text="@string/time"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecordsList"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_record"/>

        <TextView
            android:id="@+id/tvNoDataAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_records_available"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:visibility="gone"
            android:layout_gravity="center" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:theme="@style/Theme.MaterialComponents.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/gray"
        app:tint="@color/primaryDarkColor"
        android:layout_margin="26dp"
        app:srcCompat="@drawable/ic_add_white_24"
        android:contentDescription="@string/add_manually_new_record" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>