<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_background_top"
    android:orientation="vertical"
    android:padding="25dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background_top"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:padding="15dp"
                android:text="@string/add_new_record"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvStopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:textColor="@color/white"
                android:textSize="62sp"
                android:text="@string/initialStateOfTimer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                tools:text="00:52:32" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_name_of_record"
                android:layout_width="250dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                android:hint="@string/name_of_record"
                android:maxLines="1"
                android:padding="3dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStopwatch" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/gradient_background_bottom_two_gradient"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btnSave"
                app:layout_constraintEnd_toStartOf="@+id/btnSave"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_name_of_record" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/gradient_background_bottom_two_gradient"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_name_of_record" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>